make it works with latest kotlin